# jwt

./: CMakeLists.txt  README.md  jwt.vix  vix.json
examples/: jwt_decode_without_verify.cpp  jwt_hs256_basic.cpp  jwt_verify_fail.cpp
include/jwt/: jwt.hpp
tests/: test_basic.cpp
